--- a/css/events.css
+++ b/css/events.css
@@ -477,7 +477,12 @@ input[type=submit] {
 	text-align: center;
 	width: 10em;
 }
-
+form label{
+	width: 100%;
+	padding: 5px 5px;
+	margin-bottom: 20px;
+	text-align: center;
+}
 /*Larger Phones, Side View on Phones, and Small Tablet Screen Size*/
 
 @media screen and (max-width: 480px) {
