--- a/css/events.css
+++ b/css/events.css
@@ -454,13 +454,13 @@ div#about > h1 {
 }
 
 div#about > h3 {
-  font-size:1.2em;
-  font-weight: bold;
-  padding: 10px;
+	font-size:1.2em;
+	font-weight: bold;
+	padding: 10px;
 }
 
 div#about > p {
-  margin-top: 5px;
+	margin-top: 5px;
 	margin-left: 10px;
 	margin-right: 10px;
 	padding-bottom: 10px;
@@ -477,7 +477,7 @@ input[type=submit] {
 	text-align: center;
 	width: 10em;
 }
-form label{
+label{
 	width: 100%;
 	padding: 5px 5px;
 	margin-bottom: 20px;
