--- a/css/events.css
+++ b/css/events.css
@@ -465,7 +465,7 @@ div#about > p {
 	margin-right: 10px;
 	padding-bottom: 10px;
 }
-form input{
+.form input{
 	width: 100%;
 	padding: 5px 5px;
 	margin-bottom: 20px;
@@ -477,7 +477,7 @@ input[type=submit] {
 	text-align: center;
 	width: 10em;
 }
-label{
+.form label{
 	width: 100%;
 	padding: 5px 5px;
 	margin-bottom: 20px;
