--- a/css/events.css
+++ b/css/events.css
@@ -464,6 +464,7 @@ div#about > p {
 	margin-left: 10px;
 	margin-right: 10px;
 	padding-bottom: 10px;
+/* css for the events page. 
 }
 .form input{
 	width: 100%;
@@ -472,8 +473,8 @@ div#about > p {
   	text-align: center;
 }
 input[type=submit] {
-	margin-right: auto;
-	margin-left: auto;
+	display: block;
+	margin: 0 auto;
 	text-align: center;
 	width: 10em;
 }
