--- a/css/events.css
+++ b/css/events.css
@@ -466,7 +466,7 @@ div#about > p {
 	padding-bottom: 10px;
 /* css for the events page. 
 }
-.form input{
+form input{
 	width: 100%;
 	padding: 5px 5px;
 	margin-bottom: 20px;
@@ -478,7 +478,7 @@ input[type=submit] {
 	text-align: center;
 	width: 10em;
 }
-.form label{
+form label{
 	width: 100%;
 	padding: 5px 5px;
 	margin-bottom: 20px;
