--- a/css/events.css
+++ b/css/events.css
@@ -245,7 +245,7 @@ form > fieldset {
 
 input[type=email],
 input[type=text],
-input[type=phone] {
+input[type=date] {
   width: 95%;
 }
 
@@ -315,7 +315,158 @@ body, html {
 	padding: 1%;
 }
 
-/* css for the events page. DJ RYBSKI
+/*Home Page Specific CSS. DON'T TOUCH! - Geldi Omeri*/
+
+div#slideShow{
+  /* Main wrapper for all images */
+	max-width: 100%;
+	max-height: 250px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.slides{
+	width: 100%;
+	height: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+div#isud{
+	background-color: #2F3648;
+	color: white;
+	/* Maybe create whitespace on the sides
+	margin-left: 1%;
+	margin-right: 1%;
+	*/
+	text-align: center;
+}
+div#isud > h1{
+	font-size: 1.44em;
+	font-weight: bold;
+	padding: 25px;
+}
+
+div#isud > h2{
+	font-size: 1.2em;
+	font-weight: bold;
+	padding: 5px;
+}
+
+div#isud > p{
+	margin-top: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-bottom: 10px;
+}
+
+div#isudVideo{
+	max-height: 50%;
+  max-width: 96%;
+  margin: auto;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+	margin-top: 1%;
+	margin-bottom: 1%;
+}
+
+.isudVideo{
+	position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
+
+div#congress{
+	background-color: #858C9B;
+	margin-top: 1%;
+	margin-bottom: 0%;
+	padding-bottom: 1px;
+	text-align: center;
+}
+
+div#congress > h1{
+	font-size: 1.44em;
+	font-weight: bold;
+	padding: 18px;
+	padding-bottom: 12px;
+}
+
+div#congress > p{
+	padding: 2px;
+	padding-bottom: 5px;
+	color: #2F3648;
+}
+
+p.end{
+	padding-bottom: 10px;
+}
+
+img#DaU{
+	width: 100%;
+}
+
+p#DaUText{
+	margin-top: 5px;
+	margin-bottom: 18px;
+	font-size: 0.8em;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
+	color: #2F3648;
+	text-decoration: none;
+}
+
+footer{
+	background-color: #2F3648;
+	color: white;
+	position: relative;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+
+/*Andy Kukuc about.html css DON'T TOUCH*/
+#map { /*google maps api key no longer free*/
+  height: 250px;
+  width: 100%;
+  border: 5px solid black;
+  margin-top: 20px;
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+div#about > h1 {
+  font-size: 1.4em;
+  font-weight: bold;
+  padding: 10px;
+}
+
+div#about > h3 {
+  font-size:1.2em;
+  font-weight: bold;
+  padding: 10px;
+}
+
+div#about > p {
+  margin-top: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-bottom: 10px;
+}
+
+/* css for the events page. DJ RYBSKI */
 input{
 	width: 100%;
 	padding: 5px 5px;
