--- a/css/events.css
+++ b/css/events.css
@@ -470,21 +470,21 @@ div#about > p {
 input{
 	width: 100%;
 	padding: 5px 5px;
-	margin-bottom: 40px;
+	margin-bottom: 15px;
   	text-align: center;
 }
 input[type=submit] {
 	display: block;
 	margin: 0 auto;
-	margin-bottom: 20px;
-	margin-top: 20px;
+	margin-bottom: 15px;
+	margin-top: 15px;
 	text-align: center;
 	width: 10em;
 }
-.label{
+label{
 	width: 100%;
 	padding: 5px 5px;
-	margin-bottom: 40px;
+	margin-bottom: 10px;
 	text-align: center;
 }
 /*Larger Phones, Side View on Phones, and Small Tablet Screen Size*/
